// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when Dollar education NUX flow hasn't been completed 1`] = `
<View
  testID="SnapshotAccountOverview"
>
  <View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingBottom": 5,
          "paddingHorizontal": 32,
          "paddingTop": 15,
          "position": "relative",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            },
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
        testID="SnapshotAccountOverview/dollarBalance"
      >
        <Text
          style={
            Array [
              Object {
                "lineHeight": 30,
              },
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 14,
                "lineHeight": 18,
              },
            ]
          }
        >
          global:celoDollars cUSD
        </Text>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "opacity": 1,
              "overflow": "visible",
              "paddingLeft": 10,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "marginTop": 5,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "fontFamily": "Hind-Regular",
                  },
                  Object {
                    "color": "#42D689",
                    "fontSize": 21,
                    "lineHeight": 29,
                    "transform": Array [
                      Object {
                        "translateY": 2,
                      },
                    ],
                  },
                ]
              }
            />
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "paddingHorizontal": 3,
                  },
                  Object {
                    "fontFamily": "Hind-Regular",
                  },
                  Object {
                    "color": "#42D689",
                    "fontSize": 36,
                    "lineHeight": 47,
                  },
                ]
              }
            >
              55.00
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#EEEEEE",
            "height": 50,
            "marginTop": 10,
            "width": 1,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
        testID="SnapshotAccountOverview/goldBalance"
      >
        <Text
          style={
            Array [
              Object {
                "lineHeight": 30,
              },
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 14,
                "lineHeight": 18,
              },
            ]
          }
        >
          global:celoGold cGLD
        </Text>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "opacity": 1,
              "overflow": "visible",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "marginTop": 5,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "fontFamily": "Hind-Regular",
                  },
                  Object {
                    "color": "#FBCC5C",
                    "fontSize": 21,
                    "lineHeight": 29,
                    "transform": Array [
                      Object {
                        "translateY": 2,
                      },
                    ],
                  },
                ]
              }
            >
              
            </Text>
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "paddingHorizontal": 3,
                  },
                  Object {
                    "fontFamily": "Hind-Regular",
                  },
                  Object {
                    "color": "#FBCC5C",
                    "fontSize": 36,
                    "lineHeight": 47,
                  },
                ]
              }
            >
              55.00
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders correctly when Gold education NUX flow hasn't been completed 1`] = `
<View
  testID="SnapshotAccountOverview"
>
  <View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingBottom": 5,
          "paddingHorizontal": 32,
          "paddingTop": 15,
          "position": "relative",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            },
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
        testID="SnapshotAccountOverview/dollarBalance"
      >
        <Text
          style={
            Array [
              Object {
                "lineHeight": 30,
              },
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 14,
                "lineHeight": 18,
              },
            ]
          }
        >
          global:celoDollars cUSD
        </Text>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "opacity": 1,
              "overflow": "visible",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "marginTop": 5,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "fontFamily": "Hind-Regular",
                  },
                  Object {
                    "color": "#42D689",
                    "fontSize": 21,
                    "lineHeight": 29,
                    "transform": Array [
                      Object {
                        "translateY": 2,
                      },
                    ],
                  },
                ]
              }
            />
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "paddingHorizontal": 3,
                  },
                  Object {
                    "fontFamily": "Hind-Regular",
                  },
                  Object {
                    "color": "#42D689",
                    "fontSize": 36,
                    "lineHeight": 47,
                  },
                ]
              }
            >
              55.00
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#EEEEEE",
            "height": 50,
            "marginTop": 10,
            "width": 1,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
        testID="SnapshotAccountOverview/goldBalance"
      >
        <Text
          style={
            Array [
              Object {
                "lineHeight": 30,
              },
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 14,
                "lineHeight": 18,
              },
            ]
          }
        >
          global:celoGold cGLD
        </Text>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "opacity": 1,
              "overflow": "visible",
              "paddingLeft": 10,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "marginTop": 5,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "fontFamily": "Hind-Regular",
                  },
                  Object {
                    "color": "#FBCC5C",
                    "fontSize": 21,
                    "lineHeight": 29,
                    "transform": Array [
                      Object {
                        "translateY": 2,
                      },
                    ],
                  },
                ]
              }
            >
              
            </Text>
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "paddingHorizontal": 3,
                  },
                  Object {
                    "fontFamily": "Hind-Regular",
                  },
                  Object {
                    "color": "#FBCC5C",
                    "fontSize": 36,
                    "lineHeight": 47,
                  },
                ]
              }
            >
              55.00
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders correctly when not ready 1`] = `
<View
  testID="SnapshotAccountOverview"
>
  <View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingBottom": 5,
          "paddingHorizontal": 32,
          "paddingTop": 15,
          "position": "relative",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            },
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
        testID="SnapshotAccountOverview/dollarBalance"
      >
        <Text
          style={
            Array [
              Object {
                "lineHeight": 30,
              },
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 14,
                "lineHeight": 18,
              },
            ]
          }
        >
          global:celoDollars cUSD
        </Text>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "opacity": 1,
              "overflow": "visible",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "marginTop": 5,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "fontFamily": "Hind-Regular",
                  },
                  Object {
                    "color": "#42D689",
                    "fontSize": 21,
                    "lineHeight": 29,
                    "transform": Array [
                      Object {
                        "translateY": 2,
                      },
                    ],
                  },
                ]
              }
            />
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "paddingHorizontal": 3,
                  },
                  Object {
                    "fontFamily": "Hind-Regular",
                  },
                  Object {
                    "color": "#42D689",
                    "fontSize": 36,
                    "lineHeight": 47,
                  },
                ]
              }
            >
              55.00
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#EEEEEE",
            "height": 50,
            "marginTop": 10,
            "width": 1,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
        testID="SnapshotAccountOverview/goldBalance"
      >
        <Text
          style={
            Array [
              Object {
                "lineHeight": 30,
              },
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 14,
                "lineHeight": 18,
              },
            ]
          }
        >
          global:celoGold cGLD
        </Text>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "opacity": 1,
              "overflow": "visible",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "marginTop": 5,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "fontFamily": "Hind-Regular",
                  },
                  Object {
                    "color": "#FBCC5C",
                    "fontSize": 21,
                    "lineHeight": 29,
                    "transform": Array [
                      Object {
                        "translateY": 2,
                      },
                    ],
                  },
                ]
              }
            >
              
            </Text>
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "paddingHorizontal": 3,
                  },
                  Object {
                    "fontFamily": "Hind-Regular",
                  },
                  Object {
                    "color": "#FBCC5C",
                    "fontSize": 36,
                    "lineHeight": 47,
                  },
                ]
              }
            >
              55.00
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders correctly when ready 1`] = `
<View
  testID="SnapshotAccountOverview"
>
  <View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingBottom": 5,
          "paddingHorizontal": 32,
          "paddingTop": 15,
          "position": "relative",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            },
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
        testID="SnapshotAccountOverview/dollarBalance"
      >
        <Text
          style={
            Array [
              Object {
                "lineHeight": 30,
              },
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 14,
                "lineHeight": 18,
              },
            ]
          }
        >
          global:celoDollars cUSD
        </Text>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "opacity": 1,
              "overflow": "visible",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "marginTop": 5,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "fontFamily": "Hind-Regular",
                  },
                  Object {
                    "color": "#42D689",
                    "fontSize": 21,
                    "lineHeight": 29,
                    "transform": Array [
                      Object {
                        "translateY": 2,
                      },
                    ],
                  },
                ]
              }
            />
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "paddingHorizontal": 3,
                  },
                  Object {
                    "fontFamily": "Hind-Regular",
                  },
                  Object {
                    "color": "#42D689",
                    "fontSize": 36,
                    "lineHeight": 47,
                  },
                ]
              }
            >
              55.00
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#EEEEEE",
            "height": 50,
            "marginTop": 10,
            "width": 1,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
        testID="SnapshotAccountOverview/goldBalance"
      >
        <Text
          style={
            Array [
              Object {
                "lineHeight": 30,
              },
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 14,
                "lineHeight": 18,
              },
            ]
          }
        >
          global:celoGold cGLD
        </Text>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "opacity": 1,
              "overflow": "visible",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "marginTop": 5,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "fontFamily": "Hind-Regular",
                  },
                  Object {
                    "color": "#FBCC5C",
                    "fontSize": 21,
                    "lineHeight": 29,
                    "transform": Array [
                      Object {
                        "translateY": 2,
                      },
                    ],
                  },
                ]
              }
            >
              
            </Text>
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "paddingHorizontal": 3,
                  },
                  Object {
                    "fontFamily": "Hind-Regular",
                  },
                  Object {
                    "color": "#FBCC5C",
                    "fontSize": 36,
                    "lineHeight": 47,
                  },
                ]
              }
            >
              55.00
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders correctly when transaction pending 1`] = `
<View
  testID="SnapshotAccountOverview"
>
  <View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingBottom": 5,
          "paddingHorizontal": 32,
          "paddingTop": 15,
          "position": "relative",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            },
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
        testID="SnapshotAccountOverview/dollarBalance"
      >
        <Text
          style={
            Array [
              Object {
                "lineHeight": 30,
              },
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 14,
                "lineHeight": 18,
              },
            ]
          }
        >
          global:celoDollars cUSD
        </Text>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "opacity": 1,
              "overflow": "visible",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "marginTop": 5,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "fontFamily": "Hind-Regular",
                  },
                  Object {
                    "color": "#42D689",
                    "fontSize": 21,
                    "lineHeight": 29,
                    "transform": Array [
                      Object {
                        "translateY": 2,
                      },
                    ],
                  },
                ]
              }
            />
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "paddingHorizontal": 3,
                  },
                  Object {
                    "fontFamily": "Hind-Regular",
                  },
                  Object {
                    "color": "#42D689",
                    "fontSize": 36,
                    "lineHeight": 47,
                  },
                ]
              }
            >
              55.00
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#EEEEEE",
            "height": 50,
            "marginTop": 10,
            "width": 1,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
        testID="SnapshotAccountOverview/goldBalance"
      >
        <Text
          style={
            Array [
              Object {
                "lineHeight": 30,
              },
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 14,
                "lineHeight": 18,
              },
            ]
          }
        >
          global:celoGold cGLD
        </Text>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "opacity": 1,
              "overflow": "visible",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "marginTop": 5,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "fontFamily": "Hind-Regular",
                  },
                  Object {
                    "color": "#FBCC5C",
                    "fontSize": 21,
                    "lineHeight": 29,
                    "transform": Array [
                      Object {
                        "translateY": 2,
                      },
                    ],
                  },
                ]
              }
            >
              
            </Text>
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "paddingHorizontal": 3,
                  },
                  Object {
                    "fontFamily": "Hind-Regular",
                  },
                  Object {
                    "color": "#FBCC5C",
                    "fontSize": 36,
                    "lineHeight": 47,
                  },
                ]
              }
            >
              55.00
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
